# sdl2-example

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  add_executable.cmake  build_android-v7a.sh  build_android-v8a.sh  build_android.sh  build_ios.sh  build_ios_sim.sh  build_linux.sh  build_mac.sh  build_windows.bat  cmake.py  conanfile.py  conanfile.txt  copy_files_to_binary_dir.cmake  profile.jinja  testing.cmake
.github/workflows/: Aein29  main.yml
HelloWorldCS/: CMakeLists.txt  HelloWorldCS.csproj  Program.cs
Rectangles/: CMakeLists.txt  rectangles.c  rectangles.cpp
android/: build.gradle
cmake/: add_sdl_executable.cmake  export_options.plist  install_ios.cmake
